Repair style, size of header, add hamburger style
Repair style and size of header because it was too small for website.
add hamburger menu style and change a little bit

--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ header {
   z-index: 1000;
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  height: 40px;
-  padding: 0 20px;
+  height: 70px;
+  padding: 0 30px;
 }
 
 /* Logo */
 .logo {
-  font-size: 1em;
+  font-size: 2.3em;
   font-weight: bold;
   color: rgb(232, 223, 223);
   margin-left: auto;
@@ -36,12 +36,11 @@ header {
   color: white;
   border: none;
   border-radius: 70px;
-  padding: 5px 10px;
-  font-size: 0.6em;
-  font-weight: 500;
+  padding: 8px 18px;
+  font-size: 1em;
+  font-weight: 400;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  gap: 20px;
   height: auto;
   font: sans-serif;
 }
@@ -54,15 +53,15 @@ header {
 .left-button {
   display: flex;
   align-items: center;
-  margin-left: 150px;
-  
+  margin-left: 200px;
+
 }
 
 /* Kontener prawego przycisku */
 .right-button {
   display: flex;
   align-items: center;
-  margin-right: 150px
+  margin-right: 200px
 }
 
 /* Kontener nawigacji */
@@ -80,7 +79,7 @@ header {
 .main-nav ul {
   list-style: none;
   display: flex;
-  gap: 15px;
+  gap: 30px;
   margin: 0;
   padding: 5px;
 }
@@ -91,7 +90,7 @@ header {
 .main-nav ul li a {
   text-decoration: none;
   color: rgb(232, 223, 223);
-  font-size: 0.7em;
+  font-size: 1.3em;
   font-weight: 500;
 }
 
@@ -114,17 +113,27 @@ header {
 
 .side-menu {
   position: fixed;
-  top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 9%;
   right: -300px;
-  width: 150px;
-  height: 200px;
-  background-color: rgb(29, 19, 22);
+  width: 300px;
+  height: 500px;
+  background: linear-gradient(135deg, #f56c57, #ffa85c);
   z-index: 1000;
-  border-radius: 5px;
+  border-radius: 20px;
   padding: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  transition: right 0.3s ease;
-  
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2),
+              0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 4px solid rgba(255, 255, 255, 0.2);
+  transition: right 0.4s ease, transform 0.4s ease;
+  transition: scale(0.95);
+}
+
+.side-menu.open {
+  right: 20px;
+  transform: scale(1);
 }
 
 .side-menu ul {
@@ -135,13 +144,21 @@ header {
 
 .side-menu ul li {
   text-align: center;
-  margin: 10px 0;
+  margin: 15px 0;
 }
 
 .side-menu ul li a {
-  color: white;
+  color: #fff;
   text-decoration: none;
-  font-size: 0.8em;
-  font-weight: 500;
-  transition: color 0.3s ease;
+  font-size: 1.5em;
+  font-weight: 600;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 5px 20px;
+  border-radius: 15px;
+  transition: background 0.3s ease, transform 0.3s ease;
+}
+
+.side-menu ul li a:hover {
+  background: rgba(255, 255, 255, 0.3);
+  transform: scale(1.05);
 }
